--- a/spinup/examples/pytorch/pg_math/1_simple_pg_playground.ipynb
+++ b/spinup/examples/pytorch/pg_math/1_simple_pg_playground.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
     "from torch.distributions.categorical import Categorical\n",
     "from torch.optim import Adam\n",
     "import numpy as np\n",
@@ -34,9 +35,7 @@
     "    \"This example only works for envs with discrete action spaces.\"\n",
     "\n",
     "obs_dim = env.observation_space.shape[0]\n",
-    "n_acts = env.action_space.n\n",
-    "\n",
-    "\n"
+    "n_acts = env.action_space.n"
    ]
   },
   {
@@ -153,21 +152,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([-0.6433, -0.7456], grad_fn=<SubBackward0>)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.2992, -0.1901, -0.2784, -0.1818],\n",
+      "        [ 0.2992,  0.1901,  0.2784,  0.1818]])\n",
+      "tensor([-0.3202,  0.3202])\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "# Set the random seed for reproducibility\n",
+    "seed = 42\n",
+    "torch.manual_seed(seed)\n",
+    "np.random.seed(seed)\n",
+    "\n",
+    "# Define Policy Network\n",
+    "class PolicyNetwork(nn.Module):\n",
+    "    def __init__(self, input_dim, output_dim):\n",
+    "        super().__init__()\n",
+    "        self.fc = nn.Linear(input_dim, output_dim)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        logits = self.fc(x)\n",
+    "        return torch.distributions.Categorical(logits=logits)  # Categorical distribution from logits\n",
+    "\n",
+    "# Example usage\n",
+    "policy_net = PolicyNetwork(4, 2)  # 4 input features, 2 possible actions\n",
+    "state = torch.rand(4, requires_grad=True)  # Example state input (with gradient tracking)\n",
+    "\n",
+    "# Forward pass to get the distribution\n",
+    "dist = policy_net(state)\n",
+    "\n",
+    "# Sample an action from the distribution\n",
+    "action = dist.sample()\n",
+    "\n",
+    "# Calculate the log probability of the action\n",
+    "log_prob = dist.log_prob(action)\n",
+    "\n",
+    "# Define the loss as -log_prob * 2\n",
+    "loss = -log_prob * 2\n",
+    "\n",
+    "# Backpropagate to compute gradients\n",
+    "loss.backward()\n",
+    "\n",
+    "# Get the gradients of the Policy Network parameters\n",
+    "for param in policy_net.parameters():\n",
+    "    print(param.grad)  # This will print the gradients of each parameter\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Manual Gradient: tensor([-0.3202,  0.3202], grad_fn=<MulBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set the random seed for reproducibility\n",
+    "seed = 42\n",
+    "torch.manual_seed(seed)\n",
+    "np.random.seed(seed)\n",
+    "\n",
+    "# Define Policy Network\n",
+    "class PolicyNetwork(nn.Module):\n",
+    "    def __init__(self, input_dim, output_dim):\n",
+    "        super().__init__()\n",
+    "        self.fc = nn.Linear(input_dim, output_dim)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        logits = self.fc(x)\n",
+    "        return torch.distributions.Categorical(logits=logits)\n",
+    "\n",
+    "# Example usage\n",
+    "policy_net = PolicyNetwork(4, 2)  # 4 input features, 2 possible actions\n",
+    "\n",
+    "# Seed the state to ensure reproducibility\n",
+    "state = torch.rand(4, requires_grad=True)  # Example state input (with gradient tracking)\n",
+    "\n",
+    "# Forward pass to get the distribution\n",
+    "dist = policy_net(state)\n",
+    "\n",
+    "# Sample an action from the distribution\n",
+    "action = dist.sample()\n",
+    "\n",
+    "# Calculate the log probability of the action\n",
+    "log_prob = dist.log_prob(action)\n",
+    "\n",
+    "# Define the loss as -log_prob * 2\n",
+    "loss = -log_prob * 2\n",
+    "\n",
+    "# Manually calculate the gradient of the loss with respect to the logits\n",
+    "logits = dist.logits  # The logits produced by the network\n",
+    "probs = torch.softmax(logits, dim=-1)  # Convert logits to probabilities\n",
+    "\n",
+    "# Manually calculate the gradient of the loss w.r.t logits\n",
+    "log_prob = dist.log_prob(action)\n",
+    "chosen_action_prob = probs[action]  # Probability of the chosen action\n",
+    "\n",
+    "# Gradient of the loss with respect to the logit of the chosen action\n",
+    "grad_manual = -2 * (torch.eye(len(probs))[action] - probs)\n",
+    "\n",
+    "print(\"Manual Gradient:\", grad_manual)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Manually computed gradient with respect to logits:\n",
+      "tensor([-0.3202,  0.3202], grad_fn=<CopySlices>)\n",
+      "Manually computed gradient with respect to fc weights:\n",
+      "tensor([[-0.2992, -0.1901, -0.2784, -0.1818],\n",
+      "        [ 0.2992,  0.1901,  0.2784,  0.1818]], grad_fn=<MulBackward0>)\n",
+      "\n",
+      "Automatic gradients computed by PyTorch:\n",
+      "tensor([[-0.2992, -0.1901, -0.2784, -0.1818],\n",
+      "        [ 0.2992,  0.1901,  0.2784,  0.1818]])\n",
+      "tensor([-0.3202,  0.3202])\n",
+      "\n",
+      "Gradient with respect to fc weights (PyTorch):\n",
+      "tensor([[-0.2992, -0.1901, -0.2784, -0.1818],\n",
+      "        [ 0.2992,  0.1901,  0.2784,  0.1818]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set the random seed for reproducibility\n",
+    "seed = 42\n",
+    "torch.manual_seed(seed)\n",
+    "np.random.seed(seed)\n",
+    "\n",
+    "# Define Policy Network\n",
+    "class PolicyNetwork(nn.Module):\n",
+    "    def __init__(self, input_dim, output_dim):\n",
+    "        super().__init__()\n",
+    "        self.fc = nn.Linear(input_dim, output_dim)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        logits = self.fc(x)\n",
+    "        return torch.distributions.Categorical(logits=logits)\n",
+    "\n",
+    "# Example usage\n",
+    "policy_net = PolicyNetwork(4, 2)  # 4 input features, 2 possible actions\n",
+    "\n",
+    "# Seed the state to ensure reproducibility\n",
+    "state = torch.rand(4, requires_grad=True)  # Example state input (with gradient tracking)\n",
+    "\n",
+    "# Forward pass to get the distribution\n",
+    "dist = policy_net(state)\n",
+    "\n",
+    "# Sample an action from the distribution\n",
+    "action = dist.sample()\n",
+    "\n",
+    "# Calculate the log probability of the action\n",
+    "log_prob = dist.log_prob(action)\n",
+    "\n",
+    "# Define the loss as -log_prob * 2\n",
+    "loss = -log_prob * 2\n",
+    "\n",
+    "# Manually calculate the gradient of the loss with respect to the logits\n",
+    "logits = dist.logits  # The logits produced by the network\n",
+    "probs = torch.softmax(logits, dim=-1)  # Convert logits to probabilities\n",
+    "\n",
+    "# Get the chosen action's probability\n",
+    "chosen_action_prob = probs[action]  # Probability of the chosen action\n",
+    "\n",
+    "# Gradient of the loss with respect to logits (manual)\n",
+    "grad_logit = torch.zeros_like(logits)\n",
+    "\n",
+    "# For the chosen action (a)\n",
+    "grad_logit[action] = -2 * (1 - chosen_action_prob)\n",
+    "\n",
+    "# For the other actions (i != a)\n",
+    "for i in range(len(probs)):\n",
+    "    if i != action:\n",
+    "        grad_logit[i] = 2 * probs[i]\n",
+    "\n",
+    "# Print the manually computed gradient\n",
+    "print(\"Manually computed gradient with respect to logits:\")\n",
+    "print(grad_logit)\n",
+    "\n",
+    "# Manually compute the gradient with respect to the weights of the fc layer\n",
+    "# The input to the fc layer is the state, so we multiply by the gradients\n",
+    "grad_fc_weight = grad_logit.view(-1, 1) * state  # Gradient with respect to weights\n",
+    "\n",
+    "# Print the manually computed gradient with respect to the fc weights\n",
+    "print(\"Manually computed gradient with respect to fc weights:\")\n",
+    "print(grad_fc_weight)\n",
+    "\n",
+    "# Backpropagate to compute gradients automatically using PyTorch\n",
+    "loss.backward()\n",
+    "\n",
+    "print(\"\\nAutomatic gradients computed by PyTorch:\")\n",
+    "\n",
+    "# Get the gradients of the Policy Network parameters\n",
+    "for param in policy_net.parameters():\n",
+    "    print(param.grad)  # This will print the gradients of each parameter\n",
+    "\n",
+    "# Print the gradient with respect to the weights of the fully connected layer\n",
+    "print(\"\\nGradient with respect to fc weights (PyTorch):\")\n",
+    "print(policy_net.fc.weight.grad)\n"
+   ]
   }
  ],
  "metadata": {
