--- a/spinup/examples/pytorch/pg_math/1_simple_pg_playground.ipynb
+++ b/spinup/examples/pytorch/pg_math/1_simple_pg_playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,15 +144,15 @@
     "\n",
     "# Example usage\n",
     "policy_net = PolicyNetwork(4, 2)  # Example: 4 input features, 2 possible actions\n",
-    "state = torch.rand(4)  # Example input\n",
-    "dist = policy_net(state)\n",
+    "state1 = torch.rand(4)  # Example input\n",
+    "dist = policy_net(state1)\n",
     "action = dist.sample()\n",
     "log_prob = dist.log_prob(action)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -183,10 +183,10 @@
     "\n",
     "# Example usage\n",
     "policy_net = PolicyNetwork(4, 2)  # 4 input features, 2 possible actions\n",
-    "state = torch.rand(4, requires_grad=True)  # Example state input (with gradient tracking)\n",
+    "state1 = torch.rand(4, requires_grad=True)  # Example state input (with gradient tracking)\n",
     "\n",
     "# Forward pass to get the distribution\n",
-    "dist = policy_net(state)\n",
+    "dist = policy_net(state1)\n",
     "\n",
     "# Sample an action from the distribution\n",
     "action = dist.sample()\n",
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -238,10 +238,10 @@
     "policy_net = PolicyNetwork(4, 2)  # 4 input features, 2 possible actions\n",
     "\n",
     "# Seed the state to ensure reproducibility\n",
-    "state = torch.rand(4, requires_grad=True)  # Example state input (with gradient tracking)\n",
+    "state1 = torch.rand(4, requires_grad=True)  # Example state input (with gradient tracking)\n",
     "\n",
     "# Forward pass to get the distribution\n",
-    "dist = policy_net(state)\n",
+    "dist = policy_net(state1)\n",
     "\n",
     "# Sample an action from the distribution\n",
     "action = dist.sample()\n",
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -276,19 +276,14 @@
      "output_type": "stream",
      "text": [
       "Manually computed gradient with respect to logits:\n",
-      "tensor([-0.3202,  0.3202], grad_fn=<CopySlices>)\n",
+      "tensor([ 1.3456, -1.3456], grad_fn=<CopySlices>)\n",
       "Manually computed gradient with respect to fc weights:\n",
-      "tensor([[-0.2992, -0.1901, -0.2784, -0.1818],\n",
-      "        [ 0.2992,  0.1901,  0.2784,  0.1818]], grad_fn=<MulBackward0>)\n",
+      "tensor([[ 1.2659,  0.1792,  1.2576,  0.7987],\n",
+      "        [-1.2659, -0.1792, -1.2576, -0.7987]], grad_fn=<MulBackward0>)\n",
       "\n",
       "Automatic gradients computed by PyTorch:\n",
-      "tensor([[-0.2992, -0.1901, -0.2784, -0.1818],\n",
-      "        [ 0.2992,  0.1901,  0.2784,  0.1818]])\n",
-      "tensor([-0.3202,  0.3202])\n",
-      "\n",
-      "Gradient with respect to fc weights (PyTorch):\n",
-      "tensor([[-0.2992, -0.1901, -0.2784, -0.1818],\n",
-      "        [ 0.2992,  0.1901,  0.2784,  0.1818]])\n"
+      "fc.weight: tensor([[ 1.2659,  0.1792,  1.2576,  0.7987],\n",
+      "        [-1.2659, -0.1792, -1.2576, -0.7987]])\n"
      ]
     }
    ],
@@ -302,7 +297,7 @@
     "class PolicyNetwork(nn.Module):\n",
     "    def __init__(self, input_dim, output_dim):\n",
     "        super().__init__()\n",
-    "        self.fc = nn.Linear(input_dim, output_dim)\n",
+    "        self.fc = nn.Linear(input_dim, output_dim, bias=False)  # No bias for simplicity\n",
     "\n",
     "    def forward(self, x):\n",
     "        logits = self.fc(x)\n",
@@ -312,10 +307,10 @@
     "policy_net = PolicyNetwork(4, 2)  # 4 input features, 2 possible actions\n",
     "\n",
     "# Seed the state to ensure reproducibility\n",
-    "state = torch.rand(4, requires_grad=True)  # Example state input (with gradient tracking)\n",
+    "state1 = torch.rand(4, requires_grad=True)  # Example state input (with gradient tracking)\n",
     "\n",
     "# Forward pass to get the distribution\n",
-    "dist = policy_net(state)\n",
+    "dist = policy_net(state1)\n",
     "\n",
     "# Sample an action from the distribution\n",
     "action = dist.sample()\n",
@@ -350,7 +345,7 @@
     "\n",
     "# Manually compute the gradient with respect to the weights of the fc layer\n",
     "# The input to the fc layer is the state, so we multiply by the gradients\n",
-    "grad_fc_weight = grad_logit.view(-1, 1) * state  # Gradient with respect to weights\n",
+    "grad_fc_weight = grad_logit.view(-1, 1) * state1  # Gradient with respect to weights\n",
     "\n",
     "# Print the manually computed gradient with respect to the fc weights\n",
     "print(\"Manually computed gradient with respect to fc weights:\")\n",
@@ -362,12 +357,123 @@
     "print(\"\\nAutomatic gradients computed by PyTorch:\")\n",
     "\n",
     "# Get the gradients of the Policy Network parameters\n",
-    "for param in policy_net.parameters():\n",
-    "    print(param.grad)  # This will print the gradients of each parameter\n",
+    "for name, param in policy_net.named_parameters():\n",
+    "    if param.grad is not None:\n",
+    "        print(f\"{name}: {param.grad}\")\n",
     "\n",
     "# Print the gradient with respect to the weights of the fully connected layer\n",
-    "print(\"\\nGradient with respect to fc weights (PyTorch):\")\n",
-    "print(policy_net.fc.weight.grad)\n"
+    "# print(\"\\nGradient with respect to fc weights (PyTorch):\")\n",
+    "# print(policy_net.fc.weight.grad)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "---- Gradients w.r.t. Parameters ----\n",
+      "fc.weight: tensor([[ 2.0169,  1.3109,  1.0185,  1.2691],\n",
+      "        [ 0.9435,  0.6132,  0.4744,  0.5945],\n",
+      "        [-2.9604, -1.9241, -1.4928, -1.8635]])\n",
+      "\n",
+      "---- Gradients w.r.t. Logits ----\n",
+      "Manually Computed Logits Gradient:\n",
+      " tensor([[ 2.0169,  1.3109,  1.0185,  1.2691],\n",
+      "        [ 0.9435,  0.6132,  0.4744,  0.5945],\n",
+      "        [-2.9604, -1.9241, -1.4928, -1.8635]], grad_fn=<AddBackward0>)\n",
+      "\n",
+      "✅ Manual gradients match PyTorch's backward()!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set random seed for reproducibility\n",
+    "torch.manual_seed(42)\n",
+    "\n",
+    "# Define a simple policy network\n",
+    "class PolicyNetwork(nn.Module):\n",
+    "    def __init__(self, input_dim, output_dim):\n",
+    "        super(PolicyNetwork, self).__init__()\n",
+    "        self.fc = nn.Linear(input_dim, output_dim, bias=False)  # Fully connected layer\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        logits = self.fc(x)  # Raw scores (logits)\n",
+    "        return torch.distributions.Categorical(logits=logits)  # Categorical distribution\n",
+    "\n",
+    "# Initialize network\n",
+    "input_dim = 4\n",
+    "output_dim = 3  # Assume 3 possible actions\n",
+    "policy_net = PolicyNetwork(input_dim, output_dim)\n",
+    "\n",
+    "# Seed the state to ensure reproducibility\n",
+    "state1 = torch.rand(input_dim)  # Example input state\n",
+    "state2 = torch.rand(input_dim)  # Another input state\n",
+    "\n",
+    "# Forward pass: Get action distributions\n",
+    "dist1 = policy_net(state1)\n",
+    "dist2 = policy_net(state2)\n",
+    "\n",
+    "# Sample actions from the distributions\n",
+    "action1 = dist1.sample()\n",
+    "action2 = dist2.sample()\n",
+    "\n",
+    "# Compute log probabilities of the actions\n",
+    "log_prob1 = dist1.log_prob(action1)\n",
+    "log_prob2 = dist2.log_prob(action2)\n",
+    "\n",
+    "# Define the losses\n",
+    "loss1 = -log_prob1 * 2\n",
+    "loss2 = -log_prob2 * 3\n",
+    "total_loss = (loss1 + loss2).mean()\n",
+    "\n",
+    "# Compute gradients using PyTorch\n",
+    "policy_net.zero_grad()\n",
+    "total_loss.backward()\n",
+    "\n",
+    "# Print the gradients of the parameters\n",
+    "print(\"\\n---- Gradients w.r.t. Parameters ----\")\n",
+    "for name, param in policy_net.named_parameters():\n",
+    "    if param.grad is not None:\n",
+    "        print(f\"{name}: {param.grad}\")\n",
+    "        \n",
+    "\n",
+    "# Extract PyTorch computed gradients\n",
+    "grad_fc_weight = policy_net.fc.weight.grad\n",
+    "\n",
+    "# ------------------------------------------\n",
+    "# Manual Gradient Computation\n",
+    "# ------------------------------------------\n",
+    "\n",
+    "# Compute probabilities from softmax\n",
+    "logits1 = policy_net.fc(state1)  # Logits for state1\n",
+    "logits2 = policy_net.fc(state2)  # Logits for state2\n",
+    "\n",
+    "probs1 = torch.softmax(logits1, dim=-1)  # Probabilities for state1\n",
+    "probs2 = torch.softmax(logits2, dim=-1)  # Probabilities for state2\n",
+    "\n",
+    "# Compute the manual gradient for logits using log-softmax trick\n",
+    "grad_logits1 = -2 * (torch.eye(output_dim)[action1] - probs1)  # Gradient of log_prob1 w.r.t logits1\n",
+    "grad_logits2 = -3 * (torch.eye(output_dim)[action2] - probs2)  # Gradient of log_prob2 w.r.t logits2\n",
+    "\n",
+    "# Compute manual gradients for network weights\n",
+    "grad_fc_weight_manual = torch.outer(grad_logits1, state1) + torch.outer(grad_logits2, state2)\n",
+    "\n",
+    "# ------------------------------------------\n",
+    "# Compare Manual Gradients to PyTorch\n",
+    "# ------------------------------------------\n",
+    "print(\"\\n---- Gradients w.r.t. Logits ----\")\n",
+    "print(\"Manually Computed Logits Gradient:\\n\", grad_fc_weight_manual)\n",
+    "\n",
+    "\n",
+    "# Check if the gradients match\n",
+    "assert torch.allclose(grad_fc_weight, grad_fc_weight_manual, atol=1e-1), \"Mismatch in weight gradients!\"\n",
+    "\n",
+    "print(\"\\n✅ Manual gradients match PyTorch's backward()!\")\n"
    ]
   }
  ],
