change variable name

--- a/spinup/examples/pytorch/pg_math/1_simple_pg_playground.ipynb
+++ b/spinup/examples/pytorch/pg_math/1_simple_pg_playground.ipynb
@@ -144,8 +144,8 @@
     "\n",
     "# Example usage\n",
     "policy_net = PolicyNetwork(4, 2)  # Example: 4 input features, 2 possible actions\n",
-    "state1 = torch.rand(4)  # Example input\n",
-    "dist = policy_net(state1)\n",
+    "state = torch.rand(4)  # Example input\n",
+    "dist = policy_net(state)\n",
     "action = dist.sample()\n",
     "log_prob = dist.log_prob(action)\n"
    ]
